[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/images/Suicbots.png" type="Texture" id=1]
[ext_resource path="res://scripts/suicbot.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/ehit.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 55.5948, 51.3222 )

[node name="suicbot" type="Area2D" groups=["damage"]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
health = 10
setscore = 50

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.80615, 1.6837 )
scale = Vector2( 11.7195, 5.32148 )

[node name="FiringPosition" type="Node2D" parent="."]

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="exlife" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_suicbot_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_suicbot_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="exlife" to="." method="_on_exlife_timeout"]
